--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <artifactId>createpptx</artifactId>
 
     <properties>
-        <app.id>cpc-es</app.id>
+        <app.id>cpc-es-java</app.id>
         <app.version>1</app.version>
         <appengine.version>1.9.30</appengine.version>
         <gcloud.plugin.version>2.0.9.74.v20150814</gcloud.plugin.version>
